# 1d1c

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  task.sh
.github/workflows/: ci.yml
inc/boj/: boj_types.h  geom_types.h  no30223.h  no33784.h  test_cases.h
src/boj/: no10807.c  no10998.c  no15439.c  no15894.c  no1924.c  no2512.c  no27866.c  no2822.c  no2903.c  no2920.c  no30223.c  no3046.c  no33784.c  no9095.c  no9507.c
test/boj/: cases_30223.txt  cases_33784.txt  main.test.c  no10807.test.c  no10998.test.c  no15439.test.c  no15894.test.c  no1924.test.c  no2512.test.c  no27866.test.c  no2822.test.c  no2903.test.c  no2920.test.c  no30223.test.c  no3046.test.c  no33784.test.c  no9095.test.c  no9507.test.c  test_io.h
